argocd-managed/argocd/templates/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.lab.oscarr.nl`)
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd-applicationset-controller.lab.oscarr.nl`)
      services:
        - name: argocd-applicationset-controller
          port: 7000
    - kind: Rule
      match: Host(`argocd.lab.oscarr.nl`) && Header(`Content-Type`) && Header(`application/grpc`)
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
